# Zombie

./: .gitignore  Atak_zombie_Wojciech_War.sln  Bullet.cpp  Bullet.h  CMakeLists.txt  Globals.cpp  INSTRUKCJE.txt  Parameters.cpp  Parameters.h  Player.h  README.md  Zombie.cpp  Zombie.h  Zombies.cpp  build.sh  main.cpp  parameters.txt  testFile.cpp
.github/workflows/: buildAction.yaml  c-cpp.yml  cmake.yml
Atak_zombie_Wojciech_War/: Atak_zombie_Wojciech_War.vcxproj  Atak_zombie_Wojciech_War.vcxproj.filters  BgWalls.cpp  BgWalls.h  Bullet.cpp  Bullet.h  Bullets.cpp  Bullets.h  CMakeLists.txt  Game.cpp  Game.h  GameMap.cpp  GameMap.h  Globals.cpp  Globals.h  Map.cpp  Map.h  Matrix2d.cpp  Matrix2d.h  Player.cpp  Player.h  Zombie.cpp  Zombie.h  Zombies.cpp  Zombies.h  main.cpp
Atak_zombie_Wojciech_War/Debug/: vc141.idb
Atak_zombie_Wojciech_War/Debug/Atak_zom.4EB4C01F.tlog/: Atak_zombie_Wojciech_War.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Atak_zombie_Wojciech_War/Release/Atak_zom.4EB4C01F.tlog/: Atak_zombie_Wojciech_War.lastbuildstate  Atak_zombie_Wojciech_War.write.1u.tlog  CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Atak_zombie_Wojciech_War/x64/Debug/: vc141.idb
Atak_zombie_Wojciech_War/x64/Debug/Atak_zom.4EB4C01F.tlog/: Atak_zombie_Wojciech_War.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Debug/: Atak_zombie_Wojciech_War.ilk
Release/: Atak_zombie_Wojciech_War.iobj  Atak_zombie_Wojciech_War.ipdb
src/: BgWalls.h  Bullets.cpp  Game.h  GameMap.h  Globals.cpp  Globals.h  Matrix2d.h  Player.h  Zombie.h  Zombies.cpp  instructions.txt  main.cpp
